# LLM-Orchestrated-Dev-Environment-Automation

./: .env.example  .gitignore  README.md  pyproject.toml
src/: cli.py
src/agents/: critic.py  generator.py  orchestrator.py
src/core/: config.py  models.py
src/llm/: provider.py
src/utils/: docker_validator.py  file_writer.py
